@@ -33,7 +33,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import jakarta.persistence.EntityManager;
 import java.util.List;
-import java.util.stream.Collectors;
+import org.hisp.dhis.common.UID;
 import org.hisp.dhis.program.Enrollment;
 import org.hisp.dhis.program.Program;
 import org.hisp.dhis.test.TestBase;
@@ -75,7 +75,7 @@ class EventProgramEnrollmentSupplierTest extends TestBase {
 
   @BeforeEach
   public void setUp() {
-    enrollments = rnd.objects(Enrollment.class, 2).collect(Collectors.toList());
+    enrollments = rnd.objects(Enrollment.class, 2).toList();
     // set the OrgUnit parent to null to avoid recursive errors when mapping
     enrollments.forEach(p -> p.getOrganisationUnit().setParent(null));
     enrollments.forEach(p -> p.getTrackedEntity().getOrganisationUnit().setParent(null));
@@ -98,7 +98,7 @@ class EventProgramEnrollmentSupplierTest extends TestBase {
   @Test
   @Disabled
   void verifySupplierWhenNoProgramsArePresent() {
-    enrollments = rnd.objects(Enrollment.class, 1).collect(Collectors.toList());
+    enrollments = rnd.objects(Enrollment.class, 1).toList();
     // set the OrgUnit parent to null to avoid recursive errors when mapping
     enrollments.forEach(p -> p.getOrganisationUnit().setParent(null));
     Enrollment enrollment = enrollments.get(0);
@@ -113,6 +113,6 @@ class EventProgramEnrollmentSupplierTest extends TestBase {
   private void assertEnrollmentInPreheat(Enrollment expected, Enrollment actual) {
     assertEquals(expected.getUid(), actual.getUid());
     assertEquals(expected.getProgram().getUid(), actual.getProgram().getUid());
-    assertEquals(actual, preheat.getEnrollment(actual.getUid()));
+    assertEquals(actual, preheat.getEnrollment(UID.of(actual)));
   }
 }
